# Urca

./: .gitignore  index.html  package.json  readme.md  vite.config.js
backend/: Cargo.toml  example.env
backend/src/: main.rs  middleware.rs
backend/src/paths/: api.rs  auth.rs  friend.rs  pfp.rs
frontend/: example.env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: app.jsx
frontend/src/pages/: AdminUsers.jsx  admin.jsx  auth.jsx  dash.jsx  profile.jsx
frontend/src/parts/: AccountSidebar.jsx  AdminSidebar.jsx  sidebar.jsx
server/: config.js  database.js  index.js  logger.js
server/models/: Friend.js  User.js
server/routes/: auth.js  friends.js  users.js
src/: app.jsx  index.css  main.jsx
src/pages/: AuthPage.jsx  DashboardPage.jsx
src/parts/: AddFriendUI.jsx  DashboardSidebar.jsx  FriendList.jsx  PendingRequests.jsx  ServerSidebar.jsx  UserAccount.jsx
