[package]
name = "Pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "macros", 
    "uuid", 
    "chrono"
] }

jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

chrono = { version = "0.4", features = ["serde"] }

tower-http = { version = "0.5", features = ["cors"] }
