[package]
name = "Pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"] }

tokio = { version = "1.0", features = ["full"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "macros", 
    "uuid", 
    "chrono"
] }

jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

chrono = { version = "0.4", features = ["serde"] }

tower-http = { version = "0.5", features = ["cors"] }
aws-sdk-s3 = { version = "1.120.0", features = ["behavior-version-latest"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }